--- a/config/CONFIG_EXPERIMENT.yaml
+++ b/config/CONFIG_EXPERIMENT.yaml
@@ -1,3 +1,5 @@
 
-cv_splits: 5
+task: pd # lgd / pd: the task to perform
+cv_splits: 2
+val_size: 0.5 # the size of the validation set, relative to the training set
 
