--- a/config/CONFIG_EXPERIMENT.yaml
+++ b/config/CONFIG_EXPERIMENT.yaml
@@ -3,3 +3,8 @@ task: pd # lgd / pd: the task to perform
 cv_splits: 2
 val_size: 0.5 # the size of the validation set, relative to the training set
 
+
+encode_categorical: 0 # 0: no encoding, 1: one-hot, 2: WoE encoding
+
+
+
