extra datasets preprocessed

--- a/config/CONFIG_EVALUATION.yaml
+++ b/config/CONFIG_EVALUATION.yaml
@@ -5,6 +5,7 @@ metrics_lgd:
   mse: True
   mae: True
   r2: True
+  rmse: True
 
 metrics_pd:
   accuracy: True
@@ -14,6 +15,7 @@ metrics_pd:
   recall: True
   aucroc: True
   aucpr: True
+  h_measure: True
 
 round_digits: 5  # Number of decimal places to round the results to
 
