--- a/config/CONFIG_DATA.yaml
+++ b/config/CONFIG_DATA.yaml
@@ -1,20 +1,25 @@
 # Description: Dataset selection (only 1 dataset at a time)
 
 dataset_pd:
-  00_pd_toydata: true
+  00_pd_toydata: false
+  #
   01_gmsc: false
-  02_taiwan_creditcard: False
-  03_vehicle_loan: False
+  02_taiwan_creditcard: false
+  03_vehicle_loan: false
+  14_german_credit: true
+  28_thomas: false
   29_loan_default: false
-  30_home_credit: False
-  34_hmeq_data: False
+  30_home_credit: false
+  34_hmeq_data: false
 
 dataset_lgd:
-  00_lgd_toydata: True
-  01_heloc_lgd: false
-  02_heloc_pd: False
-  03_loss2: False
-  04_extract_bart_baesens_5: False
+  00_lgd_toydata: false
+  #
+  01_heloc: false
+  03_loss2: false
+  05_axa: false
+  06_base_model: false
+  07_base_modelisation: false
 
 
 
