--- a/config/CONFIG_EXPERIMENT.yaml
+++ b/config/CONFIG_EXPERIMENT.yaml
@@ -1,7 +1,7 @@
 
-task: lgd # lgd / pd: the task to perform
+task: pd # lgd / pd: the task to perform
 cv_splits: 2
-val_size: 0.5 # the size of the validation set, relative to the training set
+val_size: 0.5 # the size of the validation set, relative to the training set within each fold
 
 
 
