--- a/config/CONFIG_DATA.yaml
+++ b/config/CONFIG_DATA.yaml
@@ -6,7 +6,13 @@ dataset_pd:
   01_gmsc: false
   02_taiwan_creditcard: false
   03_vehicle_loan: false
-  14_german_credit: true
+  06_lendingclub: false
+  07_case_study: false
+  09_myhom: false
+  10_hackerearth: false
+  11_cobranded: false
+  14_german_credit: false
+  22_bank_status: true
   28_thomas: false
   29_loan_default: false
   30_home_credit: false
