--- a/config/CONFIG_DATA.yaml
+++ b/config/CONFIG_DATA.yaml
@@ -19,11 +19,11 @@ dataset_pd:
   34_hmeq_data: false
 
 dataset_lgd:
-  00_lgd_toydata: true
+  00_lgd_toydata: false
   #
   01_heloc: false
   03_loss2: false
-  05_axa: false
+  05_axa: true
   06_base_model: false
   07_base_modelisation: false
 
