fixing connection of tuning configs with the tuners. ROC AUC score has a native issue for the tabpfn_hpo so you should either manually fix the bug in the source code or use f1 score instead. I wrote a feedback about the bug in their code, waiting for response.

--- a/config/CONFIG_TUNING.yaml
+++ b/config/CONFIG_TUNING.yaml
@@ -90,5 +90,5 @@ tuning_params:
         max_features: [ 'sqrt', null ]
     tabpfn_hpo: # this has an internal tuner already so we will not use Optuna or Grid search on this one
       n_trials: 50
-      metric: 'ROC_AUC'
+      metric: 'f1'
       random_state: 42
