fix shell script, make experiment tuning config call more generalizable

--- a/config/CONFIG_METHOD.yaml
+++ b/config/CONFIG_METHOD.yaml
@@ -9,19 +9,19 @@ methods:
     ann: false        # Artificial Neural Networks (ANN)
     bnb: false        # Bernoulli Naive Bayes (BNB)
     cb: false         # CatBoost (CB)
-    dt: true         # Decision Tree (DT)
+    dt: false         # Decision Tree (DT)
     gnb: false        # Gaussian Naive Bayes (GNB)
     knn: false        # K-Nearest Neighbors (KNN)
     lda: false        # Linear Discriminant Analysis (LDA)
     lgbm: false       # LightGBM (LGBM)
-    lr: true         # Logistic Regression (LR)
+    lr: false         # Logistic Regression (LR)
     rf: false         # Random Forest (RF)
     svm: false        # Support Vector Machine (SVM)
     tabnet: false     # TabNet
-    tabpfn: false     # TabPFN foundation model
+    tabpfn: true     # TabPFN foundation model
     tabpfn_rf: false  # TabPFN tuned with RandomForest
     tabpfn_hpo: false  # automatic tuning capabilities for TabPFN models using Bayesian optimization via Hyperopt
-    xgb: true        # Extreme Gradient Boosting (XGBoost)
+    xgb: false        # Extreme Gradient Boosting (XGBoost)
   # lgd methods
   lgd:
     ab: true          # AdaBoost Regression (AB)
